# dwebble

./: README.org  docker-compose.yml
.github/ISSUE_TEMPLATE/: feature.md  issue.md
docs/: final_presentation.odp  group_12_sprint_1_estimate.xlsx  group_12_sprint_1_estimates_actual_END_OF_SPRINT.xlsx  group_12_sprint_2_estimate.xlsx
docs/charter/: group_12_charter_final_revisions_no_signatures.doc
docs/estimates/: group_12_sprint_2_actual.xlsx  group_12_sprint_3_actual.xlsx  group_12_sprint_3_estimate.xlsx  group_12_sprint_4_estimate.xlsx  group_12_sprint_4_final.xlsx  group_12_sprint_5_estimate.xlsx  group_12_sprint_5_final.xlsx
docs/project_plan/: group_12_project_plan_draft.odt  group_12_project_plan_final.odt
dwebble/: Cargo.toml  Rocket.toml  rustfmt.toml
dwebble/migrations/2020-03-01-234907_init/: down.sql  up.sql
dwebble/migrations/2020-05-06-233530_instructor/: down.sql  up.sql
dwebble/migrations/2020-05-07-003253_schedule/: down.sql  up.sql
dwebble/src/: main.rs  models.rs  scheduler.rs  schema.rs.bak  util.rs
dwebble/static/: style.css
dwebble/templates/: base.html.tera  index.html.tera  login.html.tera  new_schedule.html.tera  register.html.tera  splash-index.html
