[package]
name = "dwebble"
version = "0.1.0"
authors = ["elias <elias.jm.garcia@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
csrf = "0.3.1"
data-encoding = "2.1.2"
validator = "0.10"
validator_derive = "0.10"
regex = "1.3.1"
lazy_static = "1.4.0"
rust-argon2 = "0.8"
ring = "0.13.5"
diesel = { version = "1.4", features = ["postgres", "chrono"] }

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["tera_templates", "diesel_postgres_pool"]